# PeR

./: README.md  bar_k6.place  c_path.rep  cache_misses.sh  createQcaCsv.sh  create_vpr_route_Q.sh  crit_path.sh  ctrl_k6.place  div_k6.place  i2c_k6.place  ideia.txt  log2_k6.place  ofile.txt  priority_k6.place  routefile  router_k6.place  run_reports.sh  run_reports_2.0.sh  run_vpr.sh  run_vpr_2.0.sh  run_vpr_2.sh  sin_k6.place  square_k6.place  test.csv  test.place  test.route  voter_k6.place  vpr_base_placing.sh
TRETS/: Makefile
aold/TRETS/: dalu_k4.net
aold/reports/fpga/: too-lrg_k6_yoto_DEPTH_FIRST_56.net  vpr_exe.sh  vpr_exe3.sh  vpr_exe4.sh  vpr_exe5.sh
aold/src/per/: main.cpp
aold/src/py/: blif_to_dot.py  dot_to_net.py  too-lrg_k6_yoto_DEPTH_FIRST_56.place  vpr_run.py
arch/: k5-n1.xml  lut6_1.xml  lut6_1_f.xml  lut6_8.xml  lut6_8_f.xml
benchmarks/cgra/connected/: mac.dot  new.dot  simple.dot
benchmarks/fpga/: abc_scrypt.rc
benchmarks/fpga/DATE_TEMP/: ctrl_k6.dot  d_4_w_f_4_q_False_arg_False_style_equation.dot  d_4_w_f_4_q_False_arg_False_style_mux.dot  d_4_w_f_4_q_False_arg_True_style_equation.dot  d_4_w_f_4_q_True_arg_True_style_equation.dot  log2_k6.blif  sqrt_k6.blif  (+29 more)
benchmarks/qca/: HA_inverted.dot  HS_inverted.dot  abc_scrypt.rc  convert.sh  invert_dot_format.sh  yosys_abc_command
ger_reports/: main.py
ger_reports/graphs/: blif_to_dot.py  complex_data.py  dot_to_blif.py  dot_to_net.py  ger_fpga_metrics.py  util.py
pbs_jobs/vpr_place_only/: adder_k6.pbs  bar_k6.pbs  cavlc_k6.pbs  ctrl_k6.pbs  dec_k6.pbs  div_k6.pbs  i2c_k6.pbs  int2float_k6.pbs  log2_k6.pbs  max_k6.pbs  multiplier_k6.pbs  priority_k6.pbs  router_k6.pbs  sin_k6.pbs  sqrt_k6.pbs  square_k6.pbs  voter_k6.pbs
pbs_jobs/vpr_route/: adder_k6.pbs  bar_k6.pbs  cavlc_k6.pbs  ctrl_k6.pbs  dec_k6.pbs  div_k6.pbs  i2c_k6.pbs  int2float_k6.pbs  log2_k6.pbs  max_k6.pbs  multiplier_k6.pbs  priority_k6.pbs  router_k6.pbs  sin_k6.pbs  sqrt_k6.pbs  square_k6.pbs  voter_k6.pbs
per/: CMakeLists.txt  FPGAPeRMain.cpp  QCAPeRMain.cpp  chDotStrToNMain.cpp  rearrangeInOut.cpp  test.cpp
per/impl/common/: cache.cpp  graph.cpp  util.cpp
per/impl/fpga/: fpgaGraph.cpp  fpgaSa.cpp  fpgaUtil.cpp  fpgaYoto.cpp  fpgaYott.cpp
per/impl/qca/: qcaGraph.cpp  qcaSa.cpp  qcaUtil.cpp  qcaYoto.cpp  qcaYott.cpp
per/include/common/: cache.h  cachePar.h  definitions.h  graph.h  parameters.h  parametersFpga.h  parametersQca.h  util.h
per/include/fpga/: fpgaGraph.h  fpgaPar.h  fpgaSa.h  fpgaUtil.h  fpgaYoto.h  fpgaYott.h
per/include/qca/: parametersQca.h  qcaGraph.h  qcaSa.h  qcaUtil.h  qcaYoto.h  qcaYott.h
per_fpga/: CMakeLists.txt  PeRMain.cpp  chDotStrToNMain.cpp  yotoBaseDfPMain.cpp  yotoBaseMain.cpp  yotoBaseZzMain.cpp  yotoCacheMain.cpp  yoto_main.cpp
per_fpga/impl/: cache.cpp  graph.cpp  sa.cpp  saBase.cpp  util.cpp  yoto.cpp  yotoBase.cpp  yott.cpp  yottBase.cpp
per_fpga/include/: cache.h  graph.h  parameters.h  sa.h  saBase.h  util.h  yoto.h  yotoBase.h  yott.h  yottBase.h
per_qca/impl/: graph.cpp  yottBase.cpp
per_qca/include/: cache.h  graph.h  saBase.h  util.h  yottBase.h
reports/fpga/: complex_parameters.csv  complex_parameters_DATE.csv  complex_parameters_EPFL.csv  complex_parameters_minist.csv  test.place  test.route  too-lrg_k6_yoto_DEPTH_FIRST_56.place  vpr_exe.sh
reports/qca/: 2025_04_07_SA.csv  2025_04_08_YOTT.csv  2025_05_08_YOTO.csv  2025_06_25_SA.csv
scripts_bash/: clbTries_avg.sh  correct_string.sh  create_pbs_vpr_place_only.sh  create_vpr_route_Q.sh  crit_path.sh  ioTries_avg.sh  run_jobs.sh  run_reports_2.0.sh  triesP_avg.sh  tries_avg.sh  vpr_base_routing.sh
src/cpp/: CMakeLists.txt  main.cpp
src/py/: blif_to_dot.py  requirements.txt  too-lrg_k6_yoto_DEPTH_FIRST_56.place  vpr_run.py
(+28143 files in other folders)
